--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,17 +28,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  http: ^1.3.0
+  equatable: ^2.0.7
+  flutter_bloc: ^9.1.0
+  json_annotation: ^4.9.0
+  flutter_screenutil: ^5.9.3
+  retrofit_generator: ^9.1.9
+  dio: ^5.8.0+1
+
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.3
-  http: ^0.13.6
-  json_annotation: ^4.8.1
-  equatable: ^2.0.7
+ 
+
 
 
 dev_dependencies:
-  build_runner: ^2.4.4
-  json_serializable: ^6.7.1
+  json_serializable: ^6.9.4
+  build_runner: ^2.4.15
   flutter_test:
     sdk: flutter
 
